<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bubble</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>

    <string name="action_view_mode">View Mode</string>
    <string name="action_view_mode_aspect_fill">Aspect Fill</string>
    <string name="action_view_mode_aspect_fit">Aspect Fit</string>
    <string name="action_view_mode_fit_width">Fit Width</string>

    <string name="menu_browser_filter">Filter</string>
    <string name="menu_browser_filter_all">All</string>
    <string name="menu_browser_filter_read">Read</string>
    <string name="menu_browser_filter_unread">Unread</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="menu_library">Library</string>
    <string name="menu_browser">Browser</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="directory_choose">Choose a directory for library</string>
    <string name="directory_choose_message">test</string>
    <string name="directory_picker_confirm">Select</string>
    <string name="directory_picker_cancel">Cancel</string>

    <string name="search">Search</string>

    <string name="browser_search_hint">Please enter a search term</string>

    <string name="dialog_about_title">Bubble</string>
    <string name="dialog_about_subtitle">Android comic reader</string>
    <string name="dialog_about_close">Got it</string>
</resources>
