<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:paddingTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/dialog_about_title"
            android:textSize="@dimen/dialog_title"
            android:textColor="@color/dialog_title"
            android:singleLine="true"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/dialog_about_subtitle"
            android:textSize="@dimen/dialog_subtitle"
            android:textColor="@color/dialog_subtitle"
            android:singleLine="true"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
        <Button
                android:id="@+id/dialog_close"
                android:text="@string/dialog_about_close"
                android:textColor="@color/primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:minWidth="64dp"/>
    </RelativeLayout>
</LinearLayout>